Create structure for operator-based mesh guide
Corrections from review

Controller 4.5: The mesh scaling & hop nodes feature's documentation for OCP and managed Azure customers

https://issues.redhat.com/browse/AAP-19132

--- a/downstream/modules/platform/con-about-automation-mesh.adoc
+++ b/downstream/modules/platform/con-about-automation-mesh.adoc
@@ -13,7 +13,7 @@ ifdef::operator-mesh[]
 * traversing difficult network topologies
 * bringing execution capabilities (the machine running `ansible-playbook`) closer to your target hosts
 
-The nodes (control, hop, and execution instances) are interconnected through a receptor, forming a virtual mesh.
+The nodes (control, hop, and execution instances) are interconnected through a receptor mesh, forming a virtual mesh.
 endif::operator-mesh[]
 
 {AutomationMeshStart} uses TLS encryption for communication, so traffic that traverses external networks (the internet or other) is encrypted in transit.
