--- a/downstream/modules/platform/proc-connecting-nodes-through-mesh-ingress.adoc
+++ b/downstream/modules/platform/proc-connecting-nodes-through-mesh-ingress.adoc
@@ -37,7 +37,9 @@ Where:
 
 * *apiVersion*: defines the versioned schema of this representation of an object. 
 Servers should convert recognized schemas to the latest internal value, and might reject unrecognized values.
-* *kind*: Is the type of node to create, it should be set to `AutomationControllerMeshIngress`.  `AutomationControllerMeshIngress` controls the deployment and configuration of mesh ingress on {ControllerName}.
+* *kind*: Is the type of node to create. 
+Set the value to `AutomationControllerMeshIngress`. 
+`AutomationControllerMeshIngress` controls the deployment and configuration of mesh ingress on {ControllerName}.
 * *name*: is the name of the mesh ingress node
 * *namespace*: is ???
 * *deployment_name*: You can find the deployment name by using:
@@ -47,7 +49,7 @@ oc get ansible-automation-platform.
 ----
 +
 //Additionally you can use:
-
++
 //* *external_hostname*: an optional field used for specifying the external hostname defined in an user managed ingress.
 //* *external_ipaddress*: an optional field used for specifying the external IP address defined in an user managed ingress
 //* *ingress_type*: Ingress type for ingress managed by the operator.
