--- a/downstream/modules/platform/proc-pulling-the-secret.adoc
+++ b/downstream/modules/platform/proc-pulling-the-secret.adoc
@@ -4,7 +4,7 @@
 
 [NOTE]
 ====
-This does not apply to Ansible Automation Platform on Microsoft Azure.
+This does not apply to {PlatformNameShort} on {Azure}.
 ====
 
 If you are using the default {ExecEnvShort} provided with {ControllerName} to run on remote execution nodes, you must add a pull secret in {ControllerName} that contains the credential for pulling the {ExecEnvShort} image.
