--- a/downstream/modules/platform/ref-removing-instances.adoc
+++ b/downstream/modules/platform/ref-removing-instances.adoc
@@ -16,10 +16,10 @@ Use the check boxes next to an instance to select it to remove or run a health c
 ====
 * If a node is removed using the UI, then the node is "removed" and  does not show a status. 
 If you delete the VM of the node before it is removed in the UI, it will show an error.  
-* You only need to reinstall if the topology changes the communication pattern, that is, hop nodes change or you add nodes.
+* You only need to reinstall the Install Bundle if the topology changes the communication pattern, that is, hop nodes change or you add nodes.
 ====
 
-When a button is grayed-out, you do not have permission for that particular action. 
+When a button is disabled, you do not have permission for that particular action. 
 Contact your Administrator to grant you the required level of access. 
 
 If you are able to remove an instance, you receive a prompt for confirmation.
