--- a/downstream/assemblies/platform/assembly-automation-mesh-operator-aap.adoc
+++ b/downstream/assemblies/platform/assembly-automation-mesh-operator-aap.adoc
@@ -2,7 +2,7 @@
 
 = {AutomationMeshStart} for operator-based {PlatformName}
 
-Scaling your automation mesh is available on Openshift or kubernetes-based deployments of {PlatformName} and is possible through adding or removing nodes from your cluster dynamically, through the *Instances* resource of the {ControllerName} UI, without running the installation script.
+Scaling your automation mesh is available on Openshift deployments of {PlatformName} and is possible through adding or removing nodes from your cluster dynamically, using the *Instances* resource of the {ControllerName} UI, without running the installation script.
 
 Instances serve as nodes in your mesh topology. 
 {AutomationMeshStart} enables you to extend the footprint of your automation. 
@@ -10,7 +10,7 @@ The location where you launch a job can be different from the location where the
 
 To manage instances from the {ControllerName} UI, you must have System Administrator or System Auditor permissions.
 
-In general, the more processor cores (CPU) and memory (RAM) the machine has, the more jobs that can be scheduled to run on that machine at once. 
+In general, the more processor cores (CPU) and memory (RAM) a node has, the more jobs that can be scheduled to run on that node at once. 
 
 For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/automation_controller_user_guide/controller-jobs#controller-capacity-determination[Automation controller capacity determination and job impact]. 
 
