--- a/downstream/modules/platform/proc-define-mesh-node-types.adoc
+++ b/downstream/modules/platform/proc-define-mesh-node-types.adoc
@@ -2,12 +2,13 @@
 
 = Defining {AutomationMesh} node types
 
-One of the ways to expand job capacity is to create a standalone *execution node* that can be added to run alongside a deployment of {ControllerName}. 
-These machines are not part of the automation controller Kubernetes cluster. 
-The control nodes run in the cluster connect and submit work to these machines through Receptor. 
+To expand job capacity, create a standalone *execution node* that can be added to run alongside a deployment of {ControllerName}. 
+These execution nodes are not part of the {ControllerName} Kubernetes cluster. 
+The control nodes run in the cluster connect and submit work to the execution nodes through Receptor. 
 These execution nodes are registered in {ControllerName} as type `execution` instances, meaning they are only used to run jobs, not dispatch work or handle web requests as control nodes do.
 
-*Hop nodes* can be added to sit between the control plane of {ControllerName} and standalone execution nodes. These hop nodes are not part of the Kubernetes cluster and are registered in {ControllerName} as an instance of type `hop`, meaning they only handle inbound and outbound traffic for otherwise unreachable nodes in a different or more strict networks.
+*Hop nodes* can be added to sit between the control plane of {ControllerName} and standalone execution nodes. 
+These hop nodes are not part of the Kubernetes cluster and are registered in {ControllerName} as an instance of type `hop`, meaning they only handle inbound and outbound traffic for otherwise unreachable nodes in different or more strict networks.
 
 The following procedure demonstrates how to set the node type for the hosts.
 
@@ -25,7 +26,7 @@ An instance requires the following attributes:
 +
 [NOTE]
 ==== 
-If the instance uses private DNS that cannot be resolved from the control cluster, DNS lookup routing fails, and the generated SSL certificates will be invalid. 
+If the instance uses private DNS that cannot be resolved from the control cluster, DNS lookup routing fails, and the generated SSL certificates is invalid. 
 Use the IP address instead.
 ====
 +
@@ -58,10 +59,10 @@ image:instances_create_details.png[Create Instance details]
 +
 [NOTE]
 ====
-The following steps are to be run from any computer that has SSH access to the newly created instance. 
+Execute the following steps from any computer that has SSH access to the newly created instance. 
 ====
 
-. Click the image:download.png[Download,15,15] icon next to *Install Bundle* to download the tarball that includes this new instance and the files necessary to install the created node into the {AutomationMesh}.
+. Click the image:download.png[Download,15,15] icon next to *Install Bundle* to download the tar file that includes this new instance and the files necessary to install the created node into the {AutomationMesh}.
 +
 image:instances_install_bundle.png[Install instance]
 +
@@ -79,7 +80,8 @@ requirements.yml
 
 . Extract the downloaded `tar.gz` Install Bundle from the location where you downloaded it. 
 To ensure that these files are in the correct location on the remote machine, the install bundle includes the `install_receptor.yml` playbook. 
-The playbook requires the Receptor collection which can be obtained using:
+The playbook requires the Receptor collection. 
+Run the following command to download the collection:
 +
 ----
 ansible-galaxy collection install -r requirements.yml
@@ -102,16 +104,16 @@ all:
 * The content of the `inventory.yml` file serves as a template and contains variables for roles that are applied during the installation and configuration of a receptor node in a mesh topology. 
 You can modify some of the other fields, or replace the file in its entirety for advanced scenarios. 
 For more information, see link:https://github.com/ansible/receptor-collection/blob/main/README.md[Role Variables].
-. For a node that uses a private DNS, edit `inventory.yml` to also use:
+. For a node that uses a private DNS, add the following line to `inventory.yml`:
 +
 ----
  ansible_ssh_common_args: <your ssh ProxyCommand setting>
 ----
 +
-This tells the `install-receptor.yml` playbook to use the proxy command to connect through the local DNS node to the private node.
+This instructs the `install-receptor.yml` playbook to use the proxy command to connect through the local DNS node to the private node.
 
 . When the attributes are configured, click btn:[Save].
-The Details page of the created instance opens.
+The *Details* page of the created instance opens.
 
 . Save the file to continue.
 . The system that is going to run the install bundle to setup the remote node and run `ansible-playbook` requires the `ansible.receptor` collection to be installed:
@@ -128,10 +130,10 @@ ansible-galaxy install -r requirements.yml
 +
 * Installing the receptor collection dependency from the `requirements.yml` file consistently retrieves the receptor version specified there. 
 Additionally, it retrieves any other collection dependencies that might be needed in the future.
-* The receptor collection must be installed on all nodes where your playbook will run, otherwise an error occurs.
+* Install the receptor collection on all nodes where your playbook will run, otherwise an error occurs.
 
 . If receptor_listener_port is defined, the machine also requires an available open port on which to establish inbound TCP connections, for example, 27199. 
-To open port 27199 for receptor communication, use:
+Run the following command to open port 27199 for receptor communication:
 +
 ----
 sudo firewall-cmd --permanent --zone=public --add-port=27199/tcp
