--- a/downstream/modules/platform/ref-operator-mesh-prerequisites.adoc
+++ b/downstream/modules/platform/ref-operator-mesh-prerequisites.adoc
@@ -3,7 +3,7 @@
 = Prerequisites
 
 The automation mesh is dependent on hop and execution nodes running on {RHEL} (RHEL). 
-Your {PlatformName} subscription grants you ten {RHEL} licenses that may be used for running components of {PlatformNameShort}. 
+Your {PlatformName} subscription grants you ten {RHEL} licenses that can be used for running components of {PlatformNameShort}. 
 The following steps prepare the RHEL instances for deployment of the automation mesh.
 
 . You require a {RHEL} operating system. 
