Create structure for operator-mesh guide
Corrected capitalisation

Controller 4.5: The mesh scaling & hop nodes feature's documentation for OCP and managed Azure customers

https://issues.redhat.com/browse/AAP-19132

--- a/downstream/modules/platform/con-automation-mesh-node-types.adoc
+++ b/downstream/modules/platform/con-automation-mesh-node-types.adoc
@@ -26,7 +26,7 @@ endif::mesh-VM[]
 ifdef::operator-mesh[]
 Instances in the control plane run persistent {ControllerName} services such as the web server and task dispatcher, in addition to project updates, and management jobs. 
 However, in the operator-based model, there are no hybrid or control nodes. 
-There are container groups, which make up containers running on the kubernetes cluster. 
+There are container groups, which make up containers running on the Kubernetes cluster. 
 That comprises the control plane. 
 That control plane is local to the kubernetes cluster in which {PlatformName} is deployed.
 endif::operator-mesh[]
