Create structure for operator-based mesh guide
Added definition of namespace

Controller 4.5: The mesh scaling & hop nodes feature's documentation for OCP and managed Azure customers

https://issues.redhat.com/browse/AAP-19132

--- a/downstream/modules/platform/proc-connecting-nodes-through-mesh-ingress.adoc
+++ b/downstream/modules/platform/proc-connecting-nodes-through-mesh-ingress.adoc
@@ -41,7 +41,8 @@ Servers should convert recognized schemas to the latest internal value, and migh
 Set the value to `AutomationControllerMeshIngress`. 
 `AutomationControllerMeshIngress` controls the deployment and configuration of mesh ingress on {ControllerName}.
 * *name*: is the name of the mesh ingress node
-* *namespace*: is ???
+* *namespace*: is which Kubernetes namespace to deploy the mesh ingress into.
+This must be in the same namespace as the {ControllerName} that the mesh is connected to
 * *deployment_name*: You can find the deployment name by using:
 +
 ----
