Added minimum requirements to doc
Correction

'system requirements' section needs more explanation for resource management

https://issues.redhat.com/browse/AAP-18552

--- a/downstream/modules/platform/ref-controller-system-requirements.adoc
+++ b/downstream/modules/platform/ref-controller-system-requirements.adoc
@@ -55,7 +55,7 @@ h| Requirement | Minimum required
 
 *Hop nodes*
 
-Hop nodes serve to route traffic from one part of the automation mesh to another (for example, could be a bastion host into another network). RAM can affect throughput, CPU activity is low. Network bandwidth and latency are generally a more important factor than either RAM or CPU.
+Hop nodes serve to route traffic from one part of the {AutomationMesh} to another (for example, a hop node could be a bastion host into another network). RAM can affect throughput, CPU activity is low. Network bandwidth and latency are generally a more important factor than either RAM or CPU.
 
 .Hop nodes
 
