--- a/downstream/modules/platform/proc-creating-the-custom-execution-environment-definition.adoc
+++ b/downstream/modules/platform/proc-creating-the-custom-execution-environment-definition.adoc
@@ -21,6 +21,11 @@ $ cd $HOME/custom-ee/
 
 . Create an `execution-environment.yml` file that defines the requirements for your custom {ExecEnvShort}. 
 
+[NOTE]
+====
+Version 3 of the execution environment definition format is required, so make sure the execution-environment.yml file contains version: 3 explicitly before continuing.
+====
+
 .. Override the base image to point to the minimal execution environment available in your {PrivateHubName}.
 
 .. Define the additional build files needed to point to any disconnected content sources that will be used in the build process.
