--- a/downstream/modules/platform/proc-creating-the-custom-execution-environment-definition.adoc
+++ b/downstream/modules/platform/proc-creating-the-custom-execution-environment-definition.adoc
@@ -24,7 +24,7 @@ $ cd $HOME/custom-ee/
 [NOTE]
 
 ====
-Version 3 of the execution environment definition format is required, so make sure the execution-environment.yml file contains version: 3 explicitly before continuing.
+Version 3 of the execution environment definition format is required, so ensure the `execution-environment.yml` file contains `version: 3` explicitly before continuing.
 ====
 
 .. Override the base image to point to the minimal execution environment available in your {PrivateHubName}.
