--- a/downstream/modules/platform/ref-hub-variables.adoc
+++ b/downstream/modules/platform/ref-hub-variables.adoc
@@ -201,6 +201,11 @@ Generating a new token will invalidate the existing token.
 Default = 63072000 seconds, or two years.
 | *`nginx_tls_protocols`* | Defines support for `ssl_protocols` in Nginx.
 
+Values available `TLSv1.2`, `TLSv1.3`
+
+If `nginx_tls-protocols` is set to `TLSv1.3` only TLSv1.3  is enabled.
+To set both protocols use `nginx_tls_protocols`=[`TLSv1.2, TLSv.1.3`]
+
 Default = `TLSv1.2`.
 | *`pulp_db_fields_key`* | Relative or absolute path to the Fernet symmetric encryption key that you want to import.
 The path is on the Ansible management node.
