--- a/downstream/titles/release-notes/topics/eda-24.adoc
+++ b/downstream/titles/release-notes/topics/eda-24.adoc
@@ -49,7 +49,7 @@
 
 * When users access the detail screen of a rule audit, the related rulebook activation link is broken. 
 
-* Long running activations with loads of events can cause an out of disk space issue. Resolved in xref:installer-24-6[installer release 2.4-6]
+* Long running activations with loads of events can cause an out of disk space issue. Resolved in xref:installer-24-6[installer release 2.4-6].
 
 * Certain characters, such as hyphen (-), forward slash (/), and period (.), are not supported in the event keys. Resolved in xref:installer-24-3[installer release 2.4-3].
 
