--- a/downstream/titles/release-notes/topics/installer-24-6.adoc
+++ b/downstream/titles/release-notes/topics/installer-24-6.adoc
@@ -29,7 +29,7 @@ link:https://access.redhat.com/errata/RHSA-2024:1057[RHSA-2024:1057]
 
 * Added the `podman_containers_conf_logs_max_size` variable for containers.conf to control the max log size for Podman installations. The default value is 10 MiB (AAP-19775) 
 
-* Setting the {EDAName} debug flag to false will now correctly disable Django debug mode (AAP-19577)
+* Setting the {EDAName} debug flag to false now correctly disables Django debug mode (AAP-19577)
 
 * `XDG_RUNTIME_DIR` is now defined when applying {EDAName} linger settings for Podman (AAP-19265)
 
