--- a/downstream/modules/platform/proc-creating-the-custom-execution-environment-definition.adoc
+++ b/downstream/modules/platform/proc-creating-the-custom-execution-environment-definition.adoc
@@ -131,7 +131,7 @@ If the {PrivateHubName} uses user-provided certificates signed by a certificate 
 .. Make a copy of that CA certificate and name it `hub-ca.crt`.
 .. Add the `hub-ca.crt` file to the `files/` subdirectory.
 +
-. Once the preceeding steps have been completed, create your python `requirements.txt` and ansible collection `requirements.yml` files, with the content needed for your custom {ExecEnvShort} image. 
+. Once the preceeding steps have been completed, create your python `requirements.txt` and Ansible collection `requirements.yml` files, with the content needed for your custom {ExecEnvShort} image. 
 +
 
 [NOTE]
