--- a/downstream/modules/platform/proc-installing-the-ansible-builder-rpm.adoc
+++ b/downstream/modules/platform/proc-installing-the-ansible-builder-rpm.adoc
@@ -8,7 +8,7 @@
 [role="_abstract"]
 
 
-On the RHEL system where custom {ExecEnvShort}s will be built, you will install the {Builder} RPM using a Satellite server that already exists in the environment. This method is preferred because the {ExecEnvShort} images can use any RHEL content from the pre-existing Satellite if required.
+On the RHEL system where custom {ExecEnvShort}s will be built, you will install the {Builder} RPM using a Satellite Server that already exists in the environment. This method is preferred because the {ExecEnvShort} images can use any RHEL content from the pre-existing Satellite if required.
 
 
 .Procedure
