--- a/downstream/modules/platform/proc-uploading-the-custom-execution-environment-to-the-private-hub.adoc
+++ b/downstream/modules/platform/proc-uploading-the-custom-execution-environment-to-the-private-hub.adoc
@@ -5,7 +5,7 @@
 :_mod-docs-content-type: PROCEDURE
 
 [id="uploading-the-custom-execution-environment-to-the-private-hub_{context}"]
-= Uploading the custom {ExecEnvShort} to the private hub
+= Uploading the custom {ExecEnvShort} to the {PrivateHubName}
 
 [role="_abstract"]
 
