--- a/downstream/modules/platform/proc-deploy-eda-controller-with-aap-operator-ocp.adoc
+++ b/downstream/modules/platform/proc-deploy-eda-controller-with-aap-operator-ocp.adoc
@@ -20,7 +20,9 @@ This takes you to the Form View to customize your installation.
 +
 [IMPORTANT]
 ====
-To ensure that you can run concurrent {EDAName} activations efficiently, you must set your maximum number of activations to 12 in the YAML view. 
+To ensure that you can run concurrent {EDAName} activations efficiently, you must set your maximum number of activations in proportion to the resources available on your cluster. You can do this by adjusting your {EDAName} settings in the YAML view. 
+
+When activating a rulebook under standard conditions, it typically utilizes approximately 250 MB of memory. However, the actual memory consumption can vary significantly based on the complexity of your rules and the volume and size of the events processed. In scenarios where a large number of events are anticipated or the rulebook complexity is high, it is highly recommended that you conduct a preliminary assessment of resource usage in a staging environment. This enables you to accurately determine the maximum number of rulebook activations. 
 ====
 +
 . Click btn:[YAML view] to update your YAML key values. 
