AAP-18707 Additional updates, per SMEs' first reviews

--- a/downstream/modules/platform/proc-deploy-eda-controller-with-aap-operator-ocp.adoc
+++ b/downstream/modules/platform/proc-deploy-eda-controller-with-aap-operator-ocp.adoc
@@ -27,7 +27,7 @@ When activating a rulebook under standard conditions, it typically utilizes appr
 +
 . Click btn:[YAML view] to update your YAML key values. 
 
-. Copy and paste the following string at the end of the `spec` key value section the `worker` key:
+. Copy and paste the following string at the end of the `spec` key value section:
 +
 ----
 extra_settings:
