Create structure for operator-based mesh guide
Corrections from review

Controller 4.5: The mesh scaling & hop nodes feature's documentation for OCP and managed Azure customers

https://issues.redhat.com/browse/AAP-19132

--- a/downstream/modules/platform/con-automation-mesh-node-types.adoc
+++ b/downstream/modules/platform/con-automation-mesh-node-types.adoc
@@ -12,7 +12,7 @@ Instances make up the network of devices that communicate with one another.
 They are the building blocks of an {AutomationMesh}. 
 These building blocks serve as nodes in a mesh topology. 
 {AutomationMeshStart} makes use of unique node types to create both the *control* and *execution* plane. 
-Learn more about the control and execution plane and their node types before designing your {AutomationMesh} topology
+Learn more about the control and execution plane and their node types before designing your {AutomationMesh} topology.
 endif::operator-mesh[]
 
 == Control plane
