--- a/downstream/modules/platform/proc-connecting-nodes-through-mesh-ingress.adoc
+++ b/downstream/modules/platform/proc-connecting-nodes-through-mesh-ingress.adoc
@@ -40,7 +40,7 @@ Servers should convert recognized schemas to the latest internal value, and migh
 * *kind*: Is the type of node to create. 
 Set the value to `AutomationControllerMeshIngress`. 
 `AutomationControllerMeshIngress` controls the deployment and configuration of mesh ingress on {ControllerName}.
-* *name*: is the name of the mesh ingress node
+* *name*: is the name of the mesh ingress node.
 * *namespace*: is which Kubernetes namespace to deploy the mesh ingress into.
 This must be in the same namespace as the {ControllerName} that the mesh is connected to
 * *deployment_name*: You can find the deployment name by using:
