--- a/downstream/modules/platform/proc-define-mesh-node-types.adoc
+++ b/downstream/modules/platform/proc-define-mesh-node-types.adoc
@@ -18,7 +18,7 @@ The following procedure demonstrates how to set the node type for the hosts.
 . On the *Instances* list page, click btn:[Add]. 
 The *Create new Instance* window opens.
 +
-image:instances_create_new.png[Create new Instance]
+image::instances_create_new.png[Create new Instance]
 +
 An instance requires the following attributes:
 
@@ -53,7 +53,7 @@ Peer the execution node to the hop node.
 
 . Click btn:[Save].
 +
-image:instances_create_details.png[Create Instance details]
+image::instances_create_details.png[Create Instance details]
 
 . To view a graphical representation of your updated topology, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-controller-topology-viewer[Topology viewer].
 +
@@ -64,7 +64,7 @@ Execute the following steps from any computer that has SSH access to the newly c
 
 . Click the image:download.png[Download,15,15] icon next to *Install Bundle* to download the tar file that includes this new instance and the files necessary to install the created node into the {AutomationMesh}.
 +
-image:instances_install_bundle.png[Install instance]
+image::instances_install_bundle.png[Install instance]
 +
 The install bundle contains TLS certificates and keys, a certificate authority, and a proper Receptor configuration file.
 +
