--- a/downstream/modules/platform/proc-set-up-virtual-machines.adoc
+++ b/downstream/modules/platform/proc-set-up-virtual-machines.adoc
@@ -39,7 +39,7 @@ sudo subscription-manager register
 +
 For more information about Simple Content Access, see link:https://access.redhat.com/articles/simple-content-access[Simple Content Access].
 
-. Enable Ansible Automation Platform subscriptions and the proper {PlatformName} channel:
+. Enable {PlatfromNameShort} subscriptions and the proper {PlatformName} channel:
 +
 ----
 # subscription-manager repos --enable ansible-automation-platform-2.4-for-rhel-8-x86_64-rpms for RHEL 8
@@ -47,7 +47,7 @@ For more information about Simple Content Access, see link:https://access.redhat
 # subscription-manager repos --enable ansible-automation-platform-2.4-for-rhel-9-x86_64-rpms for RHEL 9
 ----
 
-. Ensure the  packages are up to date:
+. Ensure the packages are up to date:
 +
 ---- 
 sudo dnf upgrade -y
