--- a/downstream/modules/platform/proc-pulling-the-secret.adoc
+++ b/downstream/modules/platform/proc-pulling-the-secret.adoc
@@ -9,7 +9,7 @@ This does not apply to {PlatformNameShort} on {Azure}.
 
 If you are using the default {ExecEnvShort} provided with {ControllerName} to run on remote execution nodes, you must add a pull secret in {ControllerName} that contains the credential for pulling the {ExecEnvShort} image.
 
-To do this, create a pull secret on the {ControllerName} namespace and configure the `ee_pull_credentials_secret parameter in the Operator as follows:
+To do this, create a pull secret on the {ControllerName} namespace and configure the `ee_pull_credentials_secret` parameter in the Operator as follows:
 
 .Procedure
 . Create a secret using the following command:
