--- a/downstream/modules/platform/ref-hub-variables.adoc
+++ b/downstream/modules/platform/ref-hub-variables.adoc
@@ -207,7 +207,7 @@ The TLSv1.1 and TLSv1.2 parameters only work when OpenSSL 1.0.1 or higher is use
 
 The TLSv1.3 parameter only works when OpenSSL 1.1.1 or higher is used.
 
-If `nginx_tls-protocols = ['TLSv1.3']' only TLSv1.3  is enabled.
+If `nginx_tls-protocols = ['TLSv1.3']` only TLSv1.3  is enabled.
 To set more than one protocol use `nginx_tls_protocols = ['TLSv1.2', 'TLSv.1.3']`
 
 Default = `TLSv1.2`.
