Edits per peer review

--- a/downstream/assemblies/platform/assembly-controller-api-filter.adoc
+++ b/downstream/assemblies/platform/assembly-controller-api-filter.adoc
@@ -2,4 +2,4 @@
 
 = Filtering in the API
 
-Any collection is what the system calls a “queryset” and can be filtered via various operators.
+Any collection is what the system calls a “queryset” and can be filtered using various operators.
