--- a/lightspeed/assemblies/assembly_managing-admin-dashboard-telemetry.adoc
+++ b/lightspeed/assemblies/assembly_managing-admin-dashboard-telemetry.adoc
@@ -14,7 +14,7 @@ ifdef::context[:parent-context: {context}]
 
 * *Operational telemetry data*
 +
-This is the data that is required to operate and troubleshoot the Ansible Lightspeed service. For more information, please refer the Enterprise Agreement. You cannot disable the collection of operational telemetry data. 
+This is the data that is required to operate and troubleshoot the Ansible Lightspeed service. For more information, refer the Enterprise Agreement. You cannot disable the collection of operational telemetry data. 
 
 * *Admin dashboard telemetry data*
 +
@@ -25,9 +25,7 @@ To view and manage the Admin dashboard telemetry data, ensure that you have the 
 
 * You have organization administrator privileges to a Red Hat Customer Portal organization with a valid Red Hat Ansible Automation Platform subscription.
 
-* You have installed the Ansible VS Code extension v2.13.nnn that is required to collect Admin dashboard telemetry. 
-+
-Note for Sayee: Document the minimum vscode extension version required for admin dashboard telemetry. I'm awaiting the latest VS code version to be pushed to production, ETA 6 March 2024. (https://issues.redhat.com/browse/AAP-21206) (ADD URL + INFO)
+* You have installed the Ansible VS Code extension v2.13.211 that is required to collect Admin dashboard telemetry. 
 
 IMPORTANT: {LightspeedshortName} does not collect users' personal information, such as usernames or passwords. If any personal information is inadvertently received, the data is deleted. For more information about {LightspeedshortName}'s privacy practices, see the Telemetry Data Collection Notice (ADD URL). 
 
