--- a/lightspeed/titles/lightspeed-user-guide/master.adoc
+++ b/lightspeed/titles/lightspeed-user-guide/master.adoc
@@ -20,5 +20,5 @@ include::assemblies/assembly_configuring-vscode-extension.adoc[leveloffset=+1]
 include::assemblies/assembly_requesting-task-recommendations.adoc[leveloffset=+1]
 include::assemblies/assembly_using-code-bot-for-suggestions.adoc[leveloffset=+1]
 include::assemblies/assembly_configuring-custom-models.adoc[leveloffset=+1]
-include::assemblies/assembly_managing-admin-dashboard-telemetry.adoc[]
+include::assemblies/assembly_managing-admin-dashboard-telemetry.adoc[leveloffset=+1]
 include::assemblies/assembly_troubleshooting-lightspeed.adoc[leveloffset=+1]
