--- a/downstream/modules/platform/ref-eda-system-requirements.adoc
+++ b/downstream/modules/platform/ref-eda-system-requirements.adoc
@@ -6,7 +6,7 @@ The {EDAcontroller} is a single-node system capable of handling a variable numbe
 
 [IMPORTANT]
 ====
-When activating an {EDAName} rulebook under standard conditions, it typically utilizes approximately 250 MB of memory. However, the actual memory consumption can vary significantly based on the complexity of your rules and the volume and size of the events processed. In scenarios where a large number of events are anticipated or the rulebook complexity is high, conduct a preliminary assessment of resource usage in a staging environment. This ensures that your maximum number of activations is based on the capacity of your resources. See xref:ref- single-controller-hub-eda-with-managed-db[Single {ControllerName}, single {HubName}, and single {EDAController} node with external (installer managed) database] for an example on setting {EDAController} maximum
+When activating an {EDAName} rulebook under standard conditions, it typically utilizes approximately 250 MB of memory. However, the actual memory consumption can vary significantly based on the complexity of your rules and the volume and size of the events processed. In scenarios where a large number of events are anticipated or the rulebook complexity is high, conduct a preliminary assessment of resource usage in a staging environment. This ensures that your maximum number of activations is based on the capacity of your resources. See link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html-single/red_hat_ansible_automation_platform_installation_guide/index#ref-single-controller-hub-eda-with-managed-db[Single {ControllerName}, single {HubName}, and single E{EDAcontroller} node with external (installer managed ) database] for an example on setting {EDAController} maximum
 running activations. 
 ====
 
