AAP-20343: Created docs for post GA bot improvements feature

--- a/lightspeed/modules/proc_configure-repo-scan.adoc
+++ b/lightspeed/modules/proc_configure-repo-scan.adoc
@@ -2,9 +2,9 @@
 
 [id="configure-repo-scan_{context}"]
 
-= Configuring Ansible code bot to scan your repository at regular intervals
+= Configuring the {AnsibleCodeBot} to scan your repository at regular intervals
 
-You can schedule the {AnsibleCodeBot} to scan your repositories at daily, weekly, or monthly intervals. To specify the scan schedule, use the configuration file `ansible-code-bot.yml` that was created automatically when {AnsibleCodeBot} was installed. If the file is not created automatically, use the procedure below to create the `ansible-code-bot.yml` file and specify your scan schedule. 
+You can schedule the {AnsibleCodeBot} to scan your repositories at daily, weekly, or monthly intervals. To specify a scan schedule for your repository, create a configuration file `ansible-code-bot.yml` within your repository and specify your scan schedule in the `.yml` file. 
 
 You can specify one of following interval cadence to scan your Git repositories:
 
@@ -16,8 +16,8 @@ For each interval cadence, {AnsibleCodeBot} starts scanning your Git repositorie
 
 .Procedure
 
-. In GitHub, navigate to the configuration file in the repository that you want to scan.
-. Optional: If the `ansible-code-bot.yml` file was not created automatically, manually create a `.yml` configuration file named `ansible-code-bot.yml` in your repository `.github` folder. For example, `.github/ansible-code-bot.yml`.
+. In GitHub, navigate to the repository that you want to scan.
+. Create a `.yml` configuration file named `ansible-code-bot.yml` in your repository `.github` folder. For example, `.github/ansible-code-bot.yml`.
 . In the configuration file, specify the `interval` parameter. You can specify the `interval` parameter as *daily*, *weekly*, or *monthly*. For example:
 +
 ----
@@ -25,9 +25,9 @@ schedule:
   interval: "<daily | weekly | monthly>"
 ----
 +
-. Save your changes. 
+. Commit your changes. 
 
-Ansible code bot starts scanning your repository per the schedule you configured at 9 AM UTC time. 
+The {AnsibleCodeBot} starts scanning your repository per the schedule you configured at 9 AM UTC time. 
 
 
 
