--- a/lightspeed/titles/lightspeed-release-notes/master.adoc
+++ b/lightspeed/titles/lightspeed-release-notes/master.adoc
@@ -12,5 +12,6 @@ include::attributes/attributes.adoc[]
  
 include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 include::modules/lightspeed-intro.adoc[leveloffset=+1]
+include::modules/lightspeed-rn-7march2024.adoc[leveloffset=+1]
 include::modules/lightspeed-rn-15feb2024.adoc[leveloffset=+1]
 include::modules/lightspeed-rn-25oct2023.adoc[leveloffset=+1]
