--- a/aap-common/assembly-appendix-release-notes.adoc
+++ b/aap-common/assembly-appendix-release-notes.adoc
@@ -26,25 +26,12 @@ ifdef::product_GCP[]
 The release version {ImageRef} of {AAPonGCP} includes the following enhancements:
 endif::product_GCP[]
 
-* Support for {PlatformNameShort} 2.4 has been added.
-* Added internal encryption to the web servers
-** Addition of custom certificates is now supported.
-* Support has been added for custom tagging and labelling.
+* Various CVE fixes
 ifdef::product_AWS[]
 ** Support has been added to AWS to add or remove tag support for resources owned by the deployment.
 endif::product_AWS[]
 ifdef::product_GCP[]
-** Support has been added to GCP to add or remove tag support for resources owned by the deployment.
-* {AAPonGCP} now has operational playbooks to add and remove extension nodes.
 endif::product_GCP[]
-* There are improvements to backup and restore functionality.
-** Support has been added for taking multiple backups.
-** An operational playbook has been added to list available backups.
-** An operational playbook has been added to delete a selected backup.
-** The capability to restore an existing VPC has been added.
-* Operational functionality to check the current version has been added.
-** Operational playbooks now check to ensure that the {PlatformNameShort} environment they are operating upon is at the same version before beginning their operation.
-
 
 [discrete]
 == Deprecated and removed features
