AAP-20343: Created docs for post GA bot improvements feature and incorporated feedback

--- a/lightspeed/assemblies/assembly_managing-admin-dashboard-telemetry.adoc
+++ b/lightspeed/assemblies/assembly_managing-admin-dashboard-telemetry.adoc
@@ -27,7 +27,7 @@ To view and manage the Admin dashboard telemetry data, ensure that you have the 
 
 * You have installed the Ansible VS Code extension v2.13.148 that is required to collect Admin dashboard telemetry. 
 
-IMPORTANT: {LightspeedshortName} does not collect users' personal information, such as usernames or passwords. If any personal information is inadvertently received, the data is deleted. For more information about {LightspeedshortName}'s privacy practices, see the Telemetry Data Collection Notice (ADD URL). 
+IMPORTANT: {LightspeedshortName} does not collect users' personal information, such as usernames or passwords. If any personal information is inadvertently received, the data is deleted. For more information about {LightspeedshortName}'s privacy practices, see the Telemetry Data Collection Notice xref:telemetry-data-collection-notice_lightspeed-intro[Telemetry Data Collection Notice].
 
 == What telemetry data is collected?
 Following is the list of telemetry data that Red Hat Ansible Lightspeed collects:
@@ -40,7 +40,6 @@ Following is the list of telemetry data that Red Hat Ansible Lightspeed collects
 
 include::modules/proc_view-admin-dashboard.adoc[leveloffset=+1]
 include::modules/proc_disable-admin-dashboard-telemetry.adoc[leveloffset=+1]
-include::modules/con_telemetry-data-collection-notice.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
