--- a/lightspeed/modules/proc_install-code-bot.adoc
+++ b/lightspeed/modules/proc_install-code-bot.adoc
@@ -41,7 +41,7 @@ If you no longer want to use the {AnsibleCodeBot}, you can uninstall it from Git
 .Procedure
 . Log in to GitHub by using the account associated with your organization.
 . In GitHub, click your profile photo > *Settings*.  
-. nder Integrations, click *Applications* > *Installed GitHub Apps*.
+. Under Integrations, click *Applications* > *Installed GitHub Apps*.
 . Click *Configure* beside the {AnsibleCodeBot} app. 
 . Under the *Danger zone* area, click *Uninstall*. 
 +
