--- a/lightspeed/modules/con_telemetry-data-collection-notice.adoc
+++ b/lightspeed/modules/con_telemetry-data-collection-notice.adoc
@@ -3,7 +3,7 @@
 [id="telemetry-data-collection-notice_{context}"]
 = {LightspeedShortName} telemetry data collection notice
 
-In connection with your use of this Red Hat offering, Red Hat may collect telemetry data about your use of the software. This data allows Red Hat to monitor the software and to improve Red Hat offerings and support, including identifying, troubleshooting, and responding to issues that impact users. The data may also be used to enable you to track your entitlements to Red Hat subscriptions and take advantage of future Red Hat purchasing programs. It may also allow Red Hat to assist you in implementing upgrades to minimize service impact. The data may be shared internally within Red Hat to improve the user experience.  If you are evaluating Red Hat software, the data will help Red Hat determine if you need assistance.
+In connection with your use of this Red Hat offering, Red Hat may collect telemetry data about your use of the software. This data allows Red Hat to monitor the software and to improve Red Hat offerings and support, including identifying, troubleshooting, and responding to issues that impact users. The data may also be used to enable you to track your entitlements to Red Hat subscriptions and take advantage of future Red Hat purchasing programs. It may also allow Red Hat to assist you in implementing upgrades to minimize service impact. The data may be shared internally within Red Hat to improve the user experience. If you are evaluating Red Hat software, the data will help Red Hat determine if you need assistance.
 
 == What information does Red Hat collect?
 
@@ -18,7 +18,7 @@ Tools within the software monitor various metrics and this information is transm
 Red Hat does not intend to collect personal information. If Red Hat discovers that personal information has been inadvertently received, Red Hat will delete such information. To the extent that any telemetry data constitutes personal data, refer the link:https://www.redhat.com/en/about/privacy-policy[Red Hat Privacy Statement] for more information about Red Hat's privacy practices. 
  
 === Retention
-Red Hat retains and stores telemetry data only for as long as it’s needed for the purposes described above or as otherwise required or permitted by law.
+Red Hat retains and stores telemetry data only for as long as it's needed for the purposes described above or as otherwise required or permitted by law.
 
 === Data Security
 Red Hat employs technical and organizational measures designed to protect the telemetry data. 
@@ -27,7 +27,7 @@ Data is being protected in the following ways:
 
 * Data transfer bucket (AWS S3): Encrypted using default AWS-SSE. Only Red Hat and third-party service providers have access.
 
-* Relational database (AWS RDS): Data is being segmented and not accessible across organizations. Data access endpoints are encrypted. Only Red Hat and customers’ organization administrators have access. 
+* Relational database (AWS RDS): Data is being segmented and not accessible across organizations. Data access endpoints are encrypted. Only Red Hat and customers' organization administrators have access. 
 
 === Data Sharing
 Red Hat may share telemetry data with its business partners in an aggregated form that does not identify customers to help the partners better understand their markets and their customer's use of Red Hat offerings or ensure the successful integration of products jointly supported by those partners. 
