--- a/lightspeed/modules/con_training-data.adoc
+++ b/lightspeed/modules/con_training-data.adoc
@@ -30,15 +30,6 @@ This is the data that is required to operate and troubleshoot the Ansible Lights
 
 * *Admin dashboard telemetry data*
 +
-This is the data that provides insight into how your organization users are using the Ansible Lightspeed service, and the metrics are displayed on the Admin dashboard. You can also disable the Admin dashboard telemetry if you no longer want to collect and monitor the telemetry data.
+This is the data that provides insight into how your organization users are using the Ansible Lightspeed service, and the metrics are displayed on the Admin dashboard. You can also disable the Admin dashboard telemetry if you no longer want to collect and monitor the telemetry data. For more information about Admin dashboard telemetry, see xref:managing-admin-dashboard-telemetry_lightspeed-user-guide[Viewing and managing Admin dashboard telemetry].
 
-== What telemetry data is collected?
-Following is the list of telemetry data that Red Hat Ansible Lightspeed collects:
-
-* Details of the organization that you are logged into, such as organization ID and account number
-* Large language models that you are connected to 
-* Inline suggestions that were accepted, rejected, or ignored by your organization users
-* User sentiment feedback
-* Top 10 modules returned in code recommendations
-
-For more information about Admin dashboard telemetry, see xref:managing-admin-dashboard-telemetry_lightspeed-user-guide[Viewing and managing Admin dashboard telemetry]. 
+include::con_telemetry-data-collection-notice.adoc[leveloffset=+1]
