--- a/lightspeed/modules/proc_manually-scan-repo.adoc
+++ b/lightspeed/modules/proc_manually-scan-repo.adoc
@@ -23,7 +23,7 @@ NOTE: If you do not see your repository in the *Repositories* list, you can add 
 +
 The repository's scan history is displayed along with the scan start time, scan status, type of scan (scheduled or manual), link to the pull request if it was created, and the log message if the scan failed. 
 
-. To view your repository on GitHub, click the lick the *Ellipsis* icon (image:ansible-code-bot-dashboard-kebab-icon.png[Ellipsis icon]) beside the repository and select *View repository*. 
+. To view your repository on GitHub, click the *Ellipsis* icon (image:ansible-code-bot-dashboard-kebab-icon.png[Ellipsis icon]) beside the repository and select *View repository*. 
 
 == Manually scanning the repository from GitHub
 
